# gcp_lb_autoscaling_demo

./: .dockerignore  .gitignore  Dockerfile  demo-key.json  get_util.sh  pyproject.toml  requirements.txt  startup_script_sample
scripts/: compute_scale_in.py  gcp_client.py  main.py  metric_manager.py  project_info.py  provision_manager.py  requests.py
